tests/snapshots/semantic_tokens__semantic_tokens_function_target.snap
---
source: tests/semantic_tokens.rs
expression: token_summary
---
- "delta_line=2, delta_start=2, length=8, type=Property, modifiers=0"
- "delta_line=0, delta_start=10, length=9, type=Namespace, modifiers=0"
- "delta_line=0, delta_start=10, length=12, type=Function, modifiers=0"
- "delta_line=1, delta_start=2, length=9, type=Parameter, modifiers=0"
- "delta_line=0, delta_start=11, length=2, type=Number, modifiers=0"
- "delta_line=1, delta_start=2, length=10, type=Parameter, modifiers=0"
- "delta_line=0, delta_start=12, length=1, type=Number, modifiers=0"
