tests/snapshots/semantic_tokens__semantic_tokens_string_values.snap
---
source: tests/semantic_tokens.rs
expression: token_summary
---
- "delta_line=2, delta_start=2, length=8, type=Property, modifiers=0"
- "delta_line=0, delta_start=10, length=9, type=Namespace, modifiers=0"
- "delta_line=0, delta_start=10, length=10, type=Class, modifiers=0"
- "delta_line=1, delta_start=2, length=4, type=Parameter, modifiers=0"
- "delta_line=0, delta_start=6, length=12, type=String, modifiers=0"
- "delta_line=1, delta_start=2, length=4, type=Parameter, modifiers=0"
- "delta_line=0, delta_start=6, length=12, type=String, modifiers=0"
