tests/snapshots/semantic_tokens__semantic_tokens_workspace_config.snap
---
source: tests/semantic_tokens.rs
expression: token_summary
---
- "delta_line=4, delta_start=12, length=5, type=Namespace, modifiers=0"
- "delta_line=0, delta_start=6, length=2, type=Namespace, modifiers=0"
- "delta_line=0, delta_start=3, length=6, type=Class, modifiers=0"
- "delta_line=1, delta_start=2, length=11, type=Parameter, modifiers=0"
- "delta_line=0, delta_start=13, length=2, type=Number, modifiers=0"
- "delta_line=1, delta_start=2, length=12, type=Parameter, modifiers=0"
- "delta_line=0, delta_start=14, length=1, type=Number, modifiers=0"
- "delta_line=3, delta_start=12, length=5, type=Namespace, modifiers=0"
- "delta_line=0, delta_start=6, length=5, type=Namespace, modifiers=0"
- "delta_line=0, delta_start=6, length=4, type=Class, modifiers=0"
- "delta_line=1, delta_start=2, length=2, type=Parameter, modifiers=0"
- "delta_line=0, delta_start=4, length=5, type=Number, modifiers=0"
- "delta_line=1, delta_start=2, length=5, type=Parameter, modifiers=0"
- "delta_line=0, delta_start=8, length=3, type=Number, modifiers=0"
- "delta_line=0, delta_start=5, length=5, type=Number, modifiers=0"
- "delta_line=3, delta_start=12, length=9, type=Namespace, modifiers=0"
- "delta_line=0, delta_start=10, length=10, type=Class, modifiers=0"
- "delta_line=1, delta_start=2, length=10, type=Parameter, modifiers=0"
- "delta_line=0, delta_start=12, length=2, type=Number, modifiers=0"
- "delta_line=1, delta_start=2, length=7, type=Parameter, modifiers=0"
- "delta_line=0, delta_start=9, length=4, type=Property, modifiers=0"
- "delta_line=4, delta_start=12, length=9, type=Namespace, modifiers=0"
- "delta_line=0, delta_start=10, length=16, type=Class, modifiers=0"
- "delta_line=1, delta_start=2, length=4, type=Parameter, modifiers=0"
- "delta_line=0, delta_start=6, length=6, type=String, modifiers=0"
- "delta_line=1, delta_start=2, length=5, type=Parameter, modifiers=0"
- "delta_line=0, delta_start=7, length=2, type=Number, modifiers=0"
